docs/0.6/_sources/api/gammapy.spectrum.SpectrumFitResult.rst.txt


SpectrumFitResult
==================================

.. currentmodule:: gammapy.spectrum

.. autoclass:: SpectrumFitResult
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~SpectrumFitResult.expected_background_counts
      ~SpectrumFitResult.expected_on_counts
      ~SpectrumFitResult.expected_source_counts
      ~SpectrumFitResult.residuals

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~SpectrumFitResult.butterfly
      ~SpectrumFitResult.from_dict
      ~SpectrumFitResult.from_yaml
      ~SpectrumFitResult.info
      ~SpectrumFitResult.plot
      ~SpectrumFitResult.plot_counts
      ~SpectrumFitResult.plot_residuals
      ~SpectrumFitResult.to_dict
      ~SpectrumFitResult.to_table
      ~SpectrumFitResult.to_yaml

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: expected_background_counts
   .. autoattribute:: expected_on_counts
   .. autoattribute:: expected_source_counts
   .. autoattribute:: residuals

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: butterfly
   .. automethod:: from_dict
   .. automethod:: from_yaml
   .. automethod:: info
   .. automethod:: plot
   .. automethod:: plot_counts
   .. automethod:: plot_residuals
   .. automethod:: to_dict
   .. automethod:: to_table
   .. automethod:: to_yaml

   
   