docs/0.11/_sources/api/gammapy.spectrum.SpectrumFitResult.rst.txt
SpectrumFitResult
=================

.. currentmodule:: gammapy.spectrum

.. autoclass:: SpectrumFitResult
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectrumFitResult.expected_source_counts
      ~SpectrumFitResult.fit_range
      ~SpectrumFitResult.model
      ~SpectrumFitResult.npred
      ~SpectrumFitResult.obs
      ~SpectrumFitResult.residuals
      ~SpectrumFitResult.stat_per_bin
      ~SpectrumFitResult.statname
      ~SpectrumFitResult.statval

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectrumFitResult.butterfly
      ~SpectrumFitResult.from_dict
      ~SpectrumFitResult.from_yaml
      ~SpectrumFitResult.plot
      ~SpectrumFitResult.plot_counts
      ~SpectrumFitResult.plot_residuals
      ~SpectrumFitResult.to_dict
      ~SpectrumFitResult.to_table
      ~SpectrumFitResult.to_yaml

   .. rubric:: Attributes Documentation

   .. autoattribute:: expected_source_counts
   .. autoattribute:: fit_range
   .. autoattribute:: model
   .. autoattribute:: npred
   .. autoattribute:: obs
   .. autoattribute:: residuals
   .. autoattribute:: stat_per_bin
   .. autoattribute:: statname
   .. autoattribute:: statval

   .. rubric:: Methods Documentation

   .. automethod:: butterfly
   .. automethod:: from_dict
   .. automethod:: from_yaml
   .. automethod:: plot
   .. automethod:: plot_counts
   .. automethod:: plot_residuals
   .. automethod:: to_dict
   .. automethod:: to_table
   .. automethod:: to_yaml
